# qt

./: Dockerfile  data.txt  docker-compose.yml  env_sample  main.py  pyproject.toml  routes.py
api/server/: database.py  messages.py
api/server/controller/: auth.py  user.py
api/server/database/: __init__.py  users.py
api/server/models/: auth.py  users.py
api/server/routes/: auth.py  compnies.py  netflix.py  users.py
api/server/tags/: __init__.py
api/utils/: __init__.py  functions.py  jwt.py  main.py
